# design

./: CMakeLists.txt  README.md  main.cpp
behavioral/: mediator.hpp  observer.hpp  proxy.hpp  proxy2.hpp  state.hpp
creational/: builder.hpp  factory.hpp  prototype.hpp  singleton.hpp
other/: switch.hpp
structural/: composite.hpp
